[metadata]
name = split_previous
version = 0.0.2
description = Companion plugin for BépoSténo - split words at previous stroke
author = AntoineBalaine
license = MIT
url = https://github.com/antoine-balaine/split_previous
keywords = plover_plugin plover bépo steno

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev6

packages = 
    split_previous

[options.entry_points]
plover.macro =
    space_or_split = split_previous:space_or_split
    find_homophone = split_previous:find_homophone
